# crypto-investor

./: .env.example  .gitignore  Makefile  docker-compose.yml  run.py
.claude/commands/: cloud-architect.md  commodities-analyst.md  crypto-analyst.md  docs-expert.md  equities-analyst.md  finance-lead.md  forex-analyst.md  frontend-dev.md  mobile-dev.md  mobile-ux.md  oss-architect.md  python-expert.md  quant-dev.md  strategy-engineer.md  tech-lead.md  test-lead.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/alembic/versions/: 002_risk_metric_history.py  003_trade_check_log.py
backend/analysis/: models.py  serializers.py  urls.py  views.py
backend/analysis/services/: backtest.py  data_pipeline.py  job_runner.py  ml.py  screening.py
backend/config/: asgi.py  settings.py
backend/core/: apps.py  auth.py  encryption.py  logging.py  middleware.py  serializers.py  views.py
backend/core/services/: notification.py  scheduler.py  task_registry.py
backend/market/: consumers.py  fields.py  models.py  serializers.py  urls.py  views.py
backend/market/management/commands/: migrate_env_credentials.py
backend/market/migrations/: 0002_exchangeconfig_datasourceconfig.py
backend/market/services/: exchange.py  indicators.py  regime.py
backend/portfolio/: models.py  serializers.py  urls.py  views.py
backend/portfolio/migrations/: 0002_production_hardening_indexes.py
backend/risk/: models.py  serializers.py  urls.py  views.py
backend/risk/migrations/: 0002_add_composite_index_metric_history.py
backend/risk/services/: risk.py
backend/src/app/: deps.py  main.py
backend/src/app/models/: __init__.py  risk.py
backend/src/app/routers/: paper_trading.py  regime.py  risk.py
backend/src/app/schemas/: paper_trading.py  regime.py  risk.py
backend/src/app/services/: paper_trading.py  regime.py  risk.py
backend/tests/: conftest.py  test_auth.py  test_backtest_persistence.py  test_common_libs_full.py  test_data_quality.py  test_exchange_config.py  test_hft_strategies.py  test_incremental_download.py  test_integration.py  test_job_recovery.py  test_kill_switch.py  test_live_trading.py  test_metrics.py  test_ml.py  test_ml_comprehensive.py  test_ml_phase3.py  test_nautilus_full.py  test_nautilus_runner.py  test_nautilus_strategies.py  test_notifications.py  test_observability.py  test_order_sync_autostart.py  test_paper_trading.py  test_paper_trading_views.py  test_regime_api.py  test_regime_detector.py  test_risk_manager.py  test_run_orchestrator.py  test_sample_data.py  test_scheduler.py  test_security.py  test_step_registry.py  test_strategy_router.py  test_trading.py  test_validate_deps.py  test_validation.py  test_websocket.py  test_workflow_api.py
backend/trading/: models.py  serializers.py  views.py
backend/trading/migrations/: 0003_production_hardening_indexes.py
backend/trading/services/: live_trading.py  paper_trading.py
common/data_pipeline/: __init__.py  pipeline.py  yfinance_adapter.py
common/indicators/: __init__.py  technical.py
common/ml/: __init__.py  features.py  registry.py  trainer.py
common/regime/: __init__.py  regime_detector.py  strategy_router.py
common/risk/: __init__.py  risk_manager.py
configs/: platform_config.yaml
dashboard/: app.py
freqtrade/: config.json  config.json.example
frontend/: schema.yaml
frontend/src/: App.tsx
frontend/tests/: App.test.tsx  Backtesting.test.tsx  (+18 more)
hftbacktest/: __init__.py  hft_runner.py
nautilus/: engine.py  nautilus_runner.py
scripts/: backup_db.sh  generate_secrets.sh  maintain_db.sh
(+41 files in other folders)
