[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a1si-aitp"
version = "0.1.0"
description = "Crypto investment platform backend"
requires-python = ">=3.10"
dependencies = [
    "APScheduler>=3.10,<4",
    "argon2-cffi>=23,<24",
    "ccxt>=4,<4.5.40",
    "channels>=4,<5",
    "cryptography>=46.0.5,<48",
    "daphne>=4,<5",
    "django>=5.1,<6",
    "django-cors-headers>=4,<5",
    "djangorestframework>=3.15,<4",
    "httpx>=0.27,<1",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "PyYAML>=6,<7",
    "drf-spectacular>=0.28,<1",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2,<3",
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pyarrow>=14,<24",
    "yfinance>=0.2.36",
]
ml = [
    "lightgbm>=4,<5",
    "pandas>=2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.3,<2",
]
trading = [
    "freqtrade>=2024,<2027",
    "ta-lib>=0.5,<1",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "pytest-django>=4,<5",
    "pytest-asyncio>=0.24,<1",
    "pytest-rerunfailures>=14,<16",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "pip-audit>=2,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["config"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"market/services/regime.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
filterwarnings = [
    "ignore::RuntimeWarning:asyncio",
    "ignore:.*was destroyed but it is pending.*:RuntimeWarning",
    "ignore:.*coroutine.*was never awaited.*:RuntimeWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
# Retry tests that hit intermittent SQLite SQLITE_LOCKED errors
addopts = "--reruns=2 --reruns-delay=0.5 --only-rerun='database table is locked'"
